<resources>
	<string name="app_name">BUNDA</string>
	<string name="app_version">App Version: %1$s (built on %2$s)</string>
	<string name="outdated_app">This is an outdated app. Please update to the latest version to continue.</string>
	<string name="app_reset_status">App Reset Status</string>
	<string name="clearing_application_data">Clearing application data...</string>
	<string name="yes_button_label">Yes</string>
	<string name="no_button_label">No</string>
	<string name="ok">OK</string>
	<string name="str_next">Next &gt;&gt;</string>
	<string name="str_previous">&lt;&lt; Previous</string>
	<string name="str_page_info">Page {0} of {1}</string>
	<string name="refresh">Refresh</string>
	<string name="return_to_register">Return</string>
	<string name="login_text">Log In</string>
	<string name="logout_text">Logout</string>
	<string name="loggin_in_dialog_title">Logging in…</string>
	<string name="loggin_in_dialog_message">Please Wait</string>
	<string name="login_failed_dialog_title">Log In Failed</string>
	<string name="login_failed_dialog_message">Please Check The Credentials</string>
	<string name="form_back_confirm_dialog_message">Are you sure you want to go back? All the data you have entered in this form will be cleared.</string>
	<string name="form_back_confirm_dialog_title">Confirm Form Close</string>
	<string name="settings_logout_confirm_title">Confirm Logout</string>
	<string name="settings_logout_confirm_dialog_message">Are you sure you want to log out? All the data will be cleared.</string>
	<string name="prompt_username">Username</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_username">This username is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="show_password_text">Show Password</string>
	<string name="remote_login_generic_error">Error occurred during Login in with server. Please try again.</string>
	<string name="remote_login_base_url_missing_error">OpenSRP Base URL is missing. Please add it in Setting and try again</string>
	<string name="log_out_text">Logout</string>
	<string name="unauthorized_group">Your user group is not allowed to access this device.</string>
	<string name="no_internet_connectivity">No internet connection. Please ensure data connectivity.</string>
	<string name="unknown_response">Login Failed. Please try later.</string>
	<string name="unauthorized">Please check the credentials.</string>
	<string name="account_disabled">Account Disabled</string>
	<string name="account_disabled_logged_off">You have been logged off as your account has been disabled. Please contact your administrator.</string>
	<string name="account_new_assignment_logged_off">You have been logged off as your account has new assignments. Log in again so that new assignments take effect</string>
	<string name="default_location_revoked_logged_off">You have been logged off as access to your default location has been revoked</string>
	<string name="your_session_has_expired">Your session has expired. Please log in again.</string>
	<string name="new_db_encryption_version_migration">You have been logged off as your application database encryption version has changed. Please login in again to complete the upgrade.</string>
	<string name="account_removed">You have been logged off as your account has been removed from the accounts manager.</string>
	<string name="no_client_available_for_url">No auth client available for the URL</string>
	<string name="clients_menu">Clients</string>
	<string name="search_menu">Search</string>
	<string name="register_menu">Register</string>
	<string name="library_menu">Library</string>
	<string name="me">Me</string>
	<string name="clients_key">clients</string>
	<string name="events_key">events</string>
	<string name="please_wait_message">Please Wait</string>
	<string name="cancelling">Cancelling...</string>
	<string name="stopping_services">Stopping services...</string>
	<string name="performing_data_checks">Performing data checks...</string>
	<string name="invalid_url_massage">Please enter a valid url.</string>
	<string name="clear_data_dialog_title">Do you want to clear data to login with a different team/location</string>
	<string name="clear_data_dialog_message">You are trying to login with a user in a different team/location. Upload of pending data and clearing of data for user %s in Team %s is required. Do you want to continue?</string>
	<string name="msg_empty_url">The URL cannot be empty</string>
	<string name="error_field_required">This field is required</string>
	<string name="form_update_title">Form Update</string>
	<string name="form_update_message">This form has content updates</string>
	<string name="current_corrupted_form">(Current Corrupted Form)</string>
	<string name="rollback_dialog_title">Select a rollback form</string>
	<string name="cannot_select_corrupted_form_rollback">You cannot select this form because it\'s corrupted!</string>
	<string name="form_changed_reopen_to_take_effect">Form has been successfully selected! Reopen this form for the changes to take effect</string>
	<string name="component_desc_image_upload_service">Uploads images to the OpenSRP server</string>
	<string name="registration_info">Registration info</string>
	<string name="filter">Filter</string>
	<string name="due_only">Due only</string>
	<string name="search_hint">Find name or ID</string>
	<string name="_0_clients_sort_updated">0 Clients (Sort: updated)</string>
	<string name="no_record">No Record</string>
	<string name="clients">%1$d Clients</string>
	<string name="client">%1$d Client</string>
	<string name="right_arrow">Right Arrow</string>
	<string name="settings">Settings</string>
	<string name="photo_captured">Photo Captured</string>
	<string name="library_placeholder">Library Placeholder</string>
	<string name="service_location">Service Location</string>
	<string name="section_icon">Section Icon</string>
	<string name="me_page_location_text">Location: </string>
	<string name="language_change_prepend_message">Language preference set to</string>
	<string name="language_change_append_message">Please restart the application.</string>
	<string name="currently_processing_transferred_records">Currently processing transferred records.</string>
	<string name="do_not_edit_client_records_until_complete">Do not edit client records until complete.</string>
	<string name="processing_disclaimer">Records will be processed for up to 10 minutes before your records will be updated. Do not edit medical records until the process is complete.</string>
	<string name="log_data_type_provided_does_not_exist_in_the_sender">The data type %s provided does not exist in the sender.</string>
	<string name="component_desc_p2p_process_records_service">Processes the records when using peer to peer for file sharing</string>
	<string name="scan_qr_code_title">Scan QR Code</string>
	<string name="permission_camera_rationale">Access to the camera is needed for detection.</string>
	<string name="no_camera_permission">This application cannot run because it does not have permission to access the camera. The application will now exit.</string>
	<string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
	<string name="title_activity_main">Barcode Reader Sample</string>
	<string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
	<string name="read_barcode">Read Barcode</string>
	<string name="auto_focus">Auto Focus</string>
	<string name="cancel">Cancel</string>
	<string name="go_to_advanced_search">Go to Advanced Search</string>
	<string name="go_to_image">Go to image</string>
	<string name="attach_file">Attach file</string>
	<string name="continue_to_your_client_list">CONTINUE TO YOUR CLIENT LIST</string>
	<string name="your_site_characteristics_for_facility_name">Your site characteristics for %1$s are all set.</string>
	<string name="site_characteristics_are_shared_for_all">Site characteristics are shared by all OpenSRP users at the facility. You can update site characteristics at any time.</string>
	<string name="exit_contact_with">Exit Contact with\n%1$s</string>
	<string name="save_changes">Save Changes Continue with this contact at a later time</string>
	<string name="close_without_saving">Close without saving Lose updates you\'ve made in this contact</string>
	<string name="no_matching_woman_found_on_this_device">No matching woman found on this device.</string>
	<string name="search">Search</string>
	<string name="tab_button_image">Tab button image</string>
	<string name="tap_button_below">Tap the button below to start/complete a contact</string>
	<string name="no_health_data_recorded">No health data recorded</string>
	<string name="register">Register</string>
	<string name="library">Library</string>
	<string name="physical_activity">Physical Activity</string>
	<string name="balanced_nutrition_source">SOURCE: World Health Organization. Integrated Management of Pregnancy and Childbirth – Pregnancy, Childbirth, Postpartum and Newborn Care: A guide for essential practice. 2015. Geneva.</string>
	<string name="string_bullet">•</string>
	<string name="physical_exam_disclaimer">DISCLAIMER: WHO is not responsible for the content of these additional materials.</string>
	<string name="physical_exam_content_one">Physical activity is any bodily movement produced by the skeletal muscles that uses energy. This includes sports, exercise, and other activities such as playing, walking, household chores, gardening, and dancing. Any activity, be it for work, to walk or cycle to and from places, or as part of leisure time, has a health benefit.</string>
	<string name="people_who_are_physically_active">People who are physically active:</string>
	<string name="improve_their_muscular_and_cardio_respiratory_fitness">improve their muscular and cardio-respiratory fitness;</string>
	<string name="improve_their_bone_and_functional_health">improve their bone and functional health;</string>
	<string name="lower_diesease_rates">have lower rates of coronary heart disease, high blood pressure, stroke, diabetes, cancer (including colon and breast cancer), and depression;</string>
	<string name="have_a_lower_risk_of_falling_and_of_hip_or_vertebral_fractures_and">have a lower risk of falling and of hip or vertebral fractures; and</string>
	<string name="are_more_likely_to_maintain_their_weight">are more likely to maintain their weight.</string>
	<string name="physical_activity_content_two">Exercise can be any activity requiring physical effort, carried out to sustain or improve health or fitness, and these can be either prescribed/unsupervised (e.g. 30 minutes of daily walking), supervised (e.g. a weekly supervised group exercise class) or both. Physical activity is also fundamental to energy balance and weight control.</string>
	<string name="physical_activity_content_three">A healthy lifestyle includes aerobic physical activity and strength-conditioning exercise aimed at maintaining a good level of fitness throughout pregnancy, without trying to reach peak fitness level or train for athletic competition. Women should choose activities with minimal risk of loss of balance and fetal trauma. Pregnant, postpartum women and persons with cardiac events may need to take extra precautions and seek medical advice before striving to achieve the recommended levels of physical activity.</string>
	<string name="for_more_information_please_access">For more information please access:</string>
	<string name="physical_activity_url_one">https://apps.who.int/iris/bitstream/handle/10665/44399/9789241599979_eng.pdf?sequence=1</string>
	<string name="physical_activity_url_two">https://extranet.who.int/rhl/pt-br/node/151040</string>
</resources>