<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:theme="@style/AncDialog"
    android:padding="20dp">

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/no_matching_woman_found_on_this_device"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="46dp">
		<Button
				android:id="@+id/cancel_no_match_dialog"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:background="@null"
				android:text="@string/cancel"
				android:textColor="#999999"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:layout_alignParentStart="true"
				android:layout_alignParentBottom="true"/>

		<Button
				android:text="@string/go_to_advanced_search"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:textColor="@color/accent"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:background="@null"
				android:id="@+id/go_to_advanced_search"
				android:layout_alignParentEnd="true"
				android:layout_alignParentBottom="true"/>
	</RelativeLayout>

</LinearLayout>