<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_overview_layout_placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/no_health_data_recorded"
        style="@style/CustomFontTextViewStyle.ClientList.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_health_data_recorded"
        android:textColor="@color/profile_records_message_grey"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tap_button"
        style="@style/CustomFontTextViewStyle.ClientList.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/tap_button_below"
        android:textAlignment="center"
        android:textColor="@color/profile_records_message_grey"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/lady_image"
        android:layout_width="50dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/tab_button_image"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/outline_arrow_back"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="9dp" />
</LinearLayout>