<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/referral_dialog_padding">

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/title_label"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contact_save_layout_margin"
        android:lines="2"
        android:paddingStart="0dp"
        android:text="@string/exit_contact_with"
        android:textColor="@color/text_black"
        android:textSize="@dimen/contact_save_title_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_changes"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/contact_save_layout_margin"
        android:background="@color/transparent"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/referral_dialog_padding"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_black"
        android:textSize="@dimen/contact_save_detail_text_size" />

    <Button
        android:id="@+id/close_without_saving"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/referral_dialog_padding"
        android:text="@string/close_without_saving"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_black"
        android:textSize="@dimen/contact_save_detail_text_size" />

</LinearLayout>