<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/library_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/library_attach_icon"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/attach_file"
            android:src="@drawable/ic_attach_file" />

        <ImageView
            android:id="@+id/library_arrow_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/go_to_image"
            android:src="@drawable/ic_arrow_forward" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/library_text_header"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/library_attach_icon"
            android:layout_toStartOf="@+id/library_arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/balanced_nutrition_source"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/library_content_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible" />

    </RelativeLayout>



    <View
        android:id="@+id/library_split_view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/library_item_layout" />
</LinearLayout>
